Feature/lanzamiento 0.0.1 (#4)
Co-authored-by: Manuel sebastian chitiva <manuel.chitiva@mercadolibre.com.co>